--- a/frontend-phone-book/src/css/index.css
+++ b/frontend-phone-book/src/css/index.css
@@ -36,9 +36,16 @@ code {
   box-shadow: 0 1px 5px rgb(138, 137, 137);
 }
 
+.titleWrapper {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
 .formTitle {
   text-align: center;
-  margin: 0 auto;
+  margin-right: 8px;
   font-weight: bold;
 }
 
