--- a/frontend-phone-book/src/css/ContactForm.css
+++ b/frontend-phone-book/src/css/ContactForm.css
@@ -70,3 +70,9 @@
   margin: 3px 14px;
   align-self: flex-start;
 }
+
+@media only screen and (max-width: 600px) {
+  .contactFormWrapper {
+    width: 75%;
+  }
+}
