--- a/frontend-phone-book/src/css/index.css
+++ b/frontend-phone-book/src/css/index.css
@@ -1,13 +1,101 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  background: #FFD93A;
+  color: #323031;
+  font-family: 'Poppins', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  margin: 0;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+/* Header */
+.header {
+  background-color: #F7F0F5;
+  text-align: center;
+  padding: 16px 0;
+  box-shadow: 2px 2px 10px #B8B2B6;
+}
+
+.appName {
+  font-family: 'Pacifico', cursive;
+  font-size: 30px;
+  margin: 0;
+}
+
+/* ContactList.js */
+.contactList {
+  border-radius: 10px;
+  box-shadow: 2px 2px 10px #C9C3C7;
+  background-color: #F7F0F5;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+  margin: 16px 16px 0;
+  padding: 0 16px;
+}
+
+.divider {
+  padding: 0 8px;
+  width: 100%;
+}
+
+
+/* ContactItem.js */
+.contactItem {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  width: 100%;
+}
+
+.contactDetails {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: flex-start;
+  margin: 8px;
+  margin-left: 16px;
+}
+
+.contactHeader {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.contactPhoneNumber {
+  font-size: 14px;
+  visibility: hidden;
+  transition: visibility 0.2s ease-in-out;
+  margin: 0;
+}
+
+.contactHeader:hover .contactPhoneNumber {
+  visibility: visible;
+}
+
+.contactName {
+  font-size: 18px;
+  font-weight: bold;
+  margin: 0 8px 0 0;
+}
+
+.contactEmail {
+  font-size: 14px;
+  margin: 0;
+}
+
+.contactButtons {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  flex: 1 1 auto;
+  margin: 8px;
 }
